# OOP_WORK

./: README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: abstract_api.py  abstract_file_methods.py  abstract_saver.py  class_api.py  class_json_saver.py  class_vacancies.py  user_interaction.py  utils.py
tests/: test_api.py  test_interaction.py  test_json_saver.py  test_utils.py  test_vacancy.py
