[tool.poetry]
name = "oop-work"
version = "0.1.0"
description = ""
authors = ["Vladimir Teslenko <vovateslenko.1996.28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
